--- a/views/index.html
+++ b/views/index.html
@@ -1,21 +1,30 @@
 <!DOCTYPE html>
 <html>
 
-   <head>
-      <title>Backend Challenges | Free Code Camp</title>
-      <link rel="shortcut icon" href="https://cdn.hyperdev.com/us-east-1%3A52a203ff-088b-420f-81be-45bf559d01b1%2Ffavicon.ico" type="image/x-icon"/>
-      <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css">
-      <link href="/public/style.css" rel="stylesheet" type="text/css">
-      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-   </head>
+<head>
+    <title>Backend Challenges | Free Code Camp</title>
+    <link rel="shortcut icon" href="https://cdn.hyperdev.com/us-east-1%3A52a203ff-088b-420f-81be-45bf559d01b1%2Ffavicon.ico"
+        type="image/x-icon" />
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css">
+    <link href="/public/style.css" rel="stylesheet" type="text/css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+</head>
 
-   <body>
-      <div class="container">
-         <h1>Manage Node.js projects and npm packages using package.json</h1>
-         <h3>Part 1 of Free Code Camp Backend Challenges</h3>
-      </div>
-   </body>
+<body>
     
-  
-  
+</body>
+
+<script>
+    $(document).ready(function () {
+        $.getJSON("http://jsonip.com/?callback=?", function (data) {
+            var regEx = new RegExp(/\(([^]+)\)/g);
+            const ip = data.ip;
+            const lang = navigator.language;
+            const software = regEx.exec(navigator.userAgent);
+            res = JSON.stringify({"ipaddress":ip, "language":lang, "software":software[1]});
+            $('body').html(res);
+        });
+    });
+</script>
+
 </html>
